--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install dependencies
@@ -33,10 +33,9 @@ jobs:
         working-directory: ./apps/web
         run: npm run build
         env:
-          NODE_ENV: development
+          NODE_ENV: production
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.STAGE_SUPABASE_URL }}
-          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.STAGE_SUPABASE_ANON_KEY }}
-          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.STAGE_SUPABASE_SERVICE_ROLE_KEY }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.STAGE_SUPABASE_PUBLISHABLE_KEY }}
           DATABASE_URL: ${{ secrets.STAGE_DATABASE_URL }}
           DIRECT_URL: ${{ secrets.STAGE_DIRECT_URL }}
           STRIPE_SECRET_KEY: ${{ secrets.STAGE_STRIPE_SECRET_KEY }}
@@ -45,8 +44,19 @@ jobs:
           BREVO_SENDER_EMAIL: ${{ secrets.BREVO_SENDER_EMAIL }}
           NEXT_PUBLIC_APP_URL: https://stage.reginor.events
           AUTH_SECRET: ${{ secrets.STAGE_AUTH_SECRET }}
+      
+      - name: Deploy build to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.STAGE_SSH_HOST }}
+          username: ${{ secrets.STAGE_SSH_USERNAME }}
+          key: ${{ secrets.STAGE_SSH_PRIVATE_KEY }}
+          port: ${{ secrets.STAGE_SSH_PORT }}
+          source: "apps/web/.next"
+          target: "~/stage.reginor.events/"
+          strip_components: 0
 
-      - name: Deploy to Server via SSH
+      - name: Setup and restart server
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.STAGE_SSH_HOST }}
@@ -56,31 +66,29 @@ jobs:
           script: |
             cd ~/stage.reginor.events
             
-            # Pull latest code
+            # Pull latest code (for server-side files)
             git fetch origin vscode-dev
             git reset --hard origin/vscode-dev
             
-            # Install dependencies
+            # Setup Node
             export NVM_DIR="$HOME/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-            nvm use 18
+            nvm use 20
             
+            # Install dependencies
             npm install
-            cd apps/web && npm install
+            cd apps/web && npm install && cd ../..
             
             # Generate Prisma Client
-            cd ~/stage.reginor.events/packages/database
+            cd packages/database
             npx prisma generate
             
             # Run migrations
-            npx dotenv-cli -e .env.stage -- npx prisma migrate deploy
-            
-            # Build Next.js
-            cd ~/stage.reginor.events/apps/web
-            npm run build
+            npx prisma migrate deploy
             
             # Restart PM2
-            pm2 restart reginor-stage
+            cd ~/stage.reginor.events
+            pm2 restart reginor-stage || pm2 start npm --name "reginor-stage" -- start
             
             echo "Stage deployment completed!"
 
