--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -21,9 +21,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: |
-          npm install
-          cd apps/web && npm install
+        run: npm ci
 
       - name: Generate Prisma Client
         working-directory: ./packages/database
