fix: Install lightningcss-linux-x64-gnu explicitly for GitHub Actions

--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -23,12 +23,9 @@ jobs:
       - name: Install dependencies
         run: npm ci --include=optional
 
-      - name: Rebuild native dependencies
+      - name: Install lightningcss Linux binding
         working-directory: ./apps/web
-        run: |
-          npm rebuild lightningcss --verbose
-          ls -la node_modules/lightningcss/*.node || echo "No .node files found"
-          find node_modules/lightningcss -name "*.node" -type f || echo "No native binaries found"
+        run: npm install --save-optional lightningcss-linux-x64-gnu
 
       - name: Generate Prisma Client
         working-directory: ./packages/database
