--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -25,7 +25,9 @@ jobs:
 
       - name: Install lightningcss Linux binding
         working-directory: ./apps/web
-        run: npm install --save-optional lightningcss-linux-x64-gnu
+        run: |
+          npm install --save-optional lightningcss-linux-x64-gnu
+          npm install --save-optional @tailwindcss/oxide-linux-x64-gnu
 
       - name: Generate Prisma Client
         working-directory: ./packages/database
