--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install --prefix=../.. && npm install",
+  "installCommand": "npm install && cd packages/database && npx prisma generate",
   "framework": "nextjs"
 }
